--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "hex-to-rgb": "^1.0.1",
     "live-server": "^0.9.2",
     "mocha": "^2.4.5",
     "validator": "^5.1.0"
