--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "hex-to-rgb": "^1.0.1",
     "live-server": "^0.9.2",
     "mocha": "^2.4.5",
     "validator": "^5.1.0"
   },
   "homepage": "https://github.com/nchapman/tippy-top-sites#readme",
   "license": "MPL-2.0",
-  "main": "top_sites.json",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nchapman/tippy-top-sites.git"
@@ -22,5 +21,8 @@
   "scripts": {
     "start": "live-server .",
     "test": "mocha -R spec"
+  },
+  "dependencies": {
+    "hex-to-rgb": "1.0.1"
   }
 }
