--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "imagemin-cli": "^3.0.0",
     "live-server": "^0.9.2",
     "mocha": "^2.4.5",
     "validator": "^5.1.0"
@@ -19,6 +20,7 @@
     "url": "git+https://github.com/nchapman/tippy-top-sites.git"
   },
   "scripts": {
+    "optimize": "imagemin images/*.png --out-dir=images",
     "deploy": "surge . --domain tippy-top-sites.surge.sh",
     "start": "live-server .",
     "test": "mocha -R spec",
