--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postversion": "git push git@github.com:nchapman/tippy-top-sites.git master --tags"
   },
   "dependencies": {
-    "hex-to-rgb": "1.0.1"
+    "hex-to-rgb": "1.0.1",
+    "url-parse": "1.1.7"
   }
 }
