--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "image-size": "^0.5.1",
     "imagemin-cli": "^3.0.0",
     "live-server": "^0.9.2",
     "mocha": "^2.4.5",
