--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "husky": "^0.14.3",
     "image-size": "^0.5.1",
     "imagemin-cli": "^3.0.0",
+    "lint-staged": "^4.0.2",
     "live-server": "^0.9.2",
     "mocha": "^2.4.5",
     "validator": "^5.1.0"
   },
   "homepage": "https://github.com/mozilla/tippy-top-sites#readme",
   "license": "MPL-2.0",
+  "lint-staged": {
+    "*.png": [
+      "npm run optimize",
+      "npm test"
+    ]
+  },
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -27,6 +35,7 @@
   "scripts": {
     "optimize": "imagemin images/*.png --out-dir=images",
     "postversion": "git push git@github.com:mozilla/tippy-top-sites.git master --tags",
+    "precommit": "lint-staged && npm test",
     "preversion": "npm test",
     "start": "live-server .",
     "test": "mocha -R spec"
